<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/back_ground"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@mipmap/logo_simaspay" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hai_son_goku"
        android:textColor="#5b5b5b"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/id_6_digit_mpin_baru"
        android:textColor="#5b5b5b"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_round_corner"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:stateListAnimator="@anim/button_state_list_animator">


        <EditText
            android:id="@+id/mpin"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:digits="1234567890"
            android:drawableLeft="@drawable/ic_mpin"
            android:drawableStart="@drawable/ic_mpin"
            android:drawablePadding="15dp"
            android:hint="@string/id_mpin_baru"
            android:maxLength="6"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:text="">
            <requestFocus />
        </EditText>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.25dp"
            android:background="#BEBEBE" />

        <EditText
            android:id="@+id/conf_mpin"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:digits="1234567890"
            android:drawableLeft="@drawable/ic_mpin"
            android:drawableStart="@drawable/ic_mpin"
            android:drawablePadding="15dp"
            android:hint="@string/id_konfirmasi_mpin_baru"
            android:maxLength="6"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:text="">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:gravity="top">

        <Button
            android:id="@+id/daftar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/login_color_red"
            android:gravity="center"
            android:text="@string/bahasa_Simpan"
            android:textAllCaps="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>