<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@mipmap/logo_simaspay" />

        <TextView
            android:id="@+id/simas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:text="@string/simas"
            android:textColor="#CC0001"
            android:textSize="65sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:text="@string/pay"
            android:textColor="@color/black"
            android:textSize="65sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/phoneinput_label"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_round_corner"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/hand_phno"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:digits="1234567890"
            android:drawableLeft="@drawable/ic_mobile"
            android:drawableStart="@drawable/ic_mobile"
            android:drawablePadding="15dp"
            android:hint="@string/id_nomor_handphone"
            android:inputType="number"
            android:maxLength="14"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.25dp"
            android:background="#BEBEBE" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/aktivasi_label"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/aktivasi_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:gravity="center"
        android:text="@string/aktivasi_akun"
        android:textSize="17sp"
        android:textStyle="" />

    <Button
        android:id="@+id/lanjut"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_color_red"
        android:text="@string/lanjut"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp" />


</LinearLayout>